--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body{
   font-size: 16px;
   margin: 1.2em;
   font-family: 'Andika', sans-serif;
-  background-size: cover ;
+  background-size: cover;
   background-image: url("../images/pigeon-background.JPEG");
   background-position: center;
   background-repeat: no-repeat;
@@ -63,7 +63,8 @@ table{
 
 .rowhead{
   border-right: 2px solid #000000;
-  border-top: 2px solid #000000;}
+  border-top: 2px solid #000000;
+}
 
 td{
   text-align: center;
@@ -79,7 +80,7 @@ tr:hover{
   background-color: rgb(126,8,48,0.25);
 }
 
-*: :focus{
+*:focus{
   border: 3px solid #417243; 
 }
 
